correção na documentação

--- a/html/testa__soma__string__stdin_8cpp.html
+++ b/html/testa__soma__string__stdin_8cpp.html
@@ -129,7 +129,7 @@ Funções</h2></td></tr>
 
 <p>Trabalho 1 - MP. </p>
 <p>Métodos de Programação - 201600 </p><dl class="section author"><dt>Autor</dt><dd>Welton de Almeida Braga - 16/0148880 </dd></dl>
-<dl class="section date"><dt>Data</dt><dd>20-09-2017 </dd></dl>
+<dl class="section date"><dt>Data</dt><dd>20-09-2017includes </dd></dl>
 
 </div>
 </div>
